--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "build-dev": "NODE_ENV=development webpack --config webpack.dev.mjs",
     "serve-dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.mjs --open",
     "build-prod": "NODE_ENV=production webpack --config webpack.prod.mjs",
+    "start": "node src/server/index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=16.13.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
@@ -26,12 +30,17 @@
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
     "style-loader": "^3.3.4",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard-scss": "^13.0.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "dotenv": "~16.4.2"
+    "cors": "~2.8.5",
+    "dotenv": "~16.4.2",
+    "express": "~4.18.2",
+    "express-validator": "~7.0.1"
   }
 }
