--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass-loader": "^14.0.0",
     "style-loader": "^3.3.4",
     "stylelint": "^16.2.1",
+    "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard-scss": "^13.0.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
