--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build-dev": "NODE_ENV=development webpack --config webpack.dev.mjs",
     "serve-dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.mjs --open",
-    "build-prod": "NODE_ENV=production webpack --config webpack.prod.mjs",
-    "start": "node src/server/index.mjs",
+    "build-prod": "NODE_ENV=production  webpack --config webpack.prod.mjs",
+    "start-dev": "NODE_ENV=development node src/server/index.mjs",
+    "start-prod": "NODE_ENV=production  node src/server/index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,10 +24,13 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.1",
     "cssnano": "^6.0.3",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.7",
     "postcss": "^8.4.33",
     "postcss-loader": "^8.0.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-attributes": "^1.0.0",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
     "style-loader": "^3.3.4",
