--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-prod": "NODE_ENV=production  webpack --config webpack.prod.mjs",
     "start-dev": "NODE_ENV=development node src/server/index.mjs",
     "start-prod": "NODE_ENV=production  node src/server/index.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,9 @@
     "cssnano": "^6.0.3",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.7.7",
     "postcss": "^8.4.33",
     "postcss-loader": "^8.0.0",
