--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build-dev": "NODE_ENV=development webpack --config webpack.dev.mjs",
-    "serve-dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.mjs --open",
     "build-prod": "NODE_ENV=production  webpack --config webpack.prod.mjs",
+    "serve-dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.mjs --open",
     "start-dev": "NODE_ENV=development node src/server/index.mjs",
     "start-prod": "NODE_ENV=production  node src/server/index.mjs",
     "test": "jest --runInBand"
@@ -43,7 +43,8 @@
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
     "cors": "~2.8.5",
