--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "attributeSort": "ASC",
   "printWidth": 100,
   "singleQuote": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "proseWrap": "always"
 }
