--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve-dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.mjs --open",
     "start-dev": "NODE_ENV=development node src/server/index.mjs",
     "start-prod": "NODE_ENV=production  node src/server/index.mjs",
-    "test": "jest --runInBand"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
